Bug 412351 - Kate fills 100% of tmpfs /tmp folder
Summary: Kate fills 100% of tmpfs /tmp folder
Status: RESOLVED FIXED
Alias: None
Product: kate
Classification: Applications
Component: general (other bugs)
Version First Reported In: 19.04.2
Platform: Fedora RPMs Linux
: NOR critical
Target Milestone: ---
Assignee: KWrite Developers
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2019-09-26 10:55 UTC by Clara
Modified: 2019-09-28 09:37 UTC (History)
4 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 19.12
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Clara 2019-09-26 10:55:16 UTC
SUMMARY
Kate fills 100% of my 8GiB tmpfs /tmp folder in a few seconds

STEPS TO REPRODUCE
1. Open Kate (if happens even if I don't open a file)

OBSERVED RESULT
Kate fills 100% of my 8GiB tmpfs /tmp folder in a few seconds causing malfunctions and forcing a reboot.

SOFTWARE/OS VERSIONS
Linux/KDE Plasma: Fedora KDE Plasma Desktop 30
(available in About System)
KDE Plasma Version: 5.15.5
KDE Frameworks Version: 5.59.0
Qt Version: 5.12.4
Comment 1 Dominik Haumann 2019-09-26 17:53:58 UTC
Do you open any file?
Is it a session that you restore?
Do you open remote files?
Comment 2 Clara 2019-09-26 17:56:01 UTC
(In reply to Dominik Haumann from comment #1)
> Do you open any file?
No, I don't open any files. I open and empty Kate and it begins to drain /tmp instantly
> Is it a session that you restore?
No, it's a clean session
> Do you open remote files?
No
Comment 3 Christoph Cullmann 2019-09-26 18:35:36 UTC
Project plugin on?
Comment 4 Clara 2019-09-26 19:02:37 UTC
(In reply to Christoph Cullmann from comment #3)
> Project plugin on?
No, sorry.

But I tried moving ~/.config/kate* and ~/.local/share/kate to a backup folder and the bug disappeared and restoring that files back does not bring the bug back so I am now unable to reproduce it in order to identify what was the problem, sorry :(

Thanks for your help.
Comment 5 Clara 2019-09-26 19:15:44 UTC
Sorry for the over-posting (first time reporting a bug here) but my last message was wrong, opening any file after removing all Kate related files in my home brings this bug back so it remains the same.
Comment 6 Christoph Cullmann 2019-09-26 19:18:12 UTC
Ok, no problem ;=)

Can you check that the project plugin is really off? Per default it is on.

It might try to create some large ctags file or such stuff if it detects some project.
Comment 7 Clara 2019-09-26 20:22:31 UTC
(In reply to Christoph Cullmann from comment #6)
> Ok, no problem ;=)
Thanks! :D

> Can you check that the project plugin is really off? Per default it is on.
> 
> It might try to create some large ctags file or such stuff if it detects
> some project.
D'oh sorry, I didn't realized it was on per default. Disabling it seems to fix the issue. I will post back if it reappears. I started using Git a few weeks ago and I also used Subversion for a long time so maybe the issue is related. Thank you again :)
Comment 8 Christoph Cullmann 2019-09-26 20:25:35 UTC
Hmm, have you ctags installed?

(e.g. is there some ctags binary in the path)

Could you try if some "ctags" process is running during that fill-up phase?
Comment 9 Clara 2019-09-27 07:31:52 UTC
(In reply to Christoph Cullmann from comment #8)
> Hmm, have you ctags installed?
> 
> (e.g. is there some ctags binary in the path)
> 
> Could you try if some "ctags" process is running during that fill-up phase?
Yes, ctags it's installed and the process is running when I start an empty Plasma session. It is installed as a dependency of abrt-cli, abrt-desktop and kdump-anaconda-addon, which I've not installed explictly so I assume they're part of a fresh Fedora KDE 30 installation or depencencies of something I installed later.
Comment 10 Christoph Cullmann 2019-09-27 07:39:11 UTC
Ok, then I guess it is really time that I add some "disable auto-index" button or just disable it per default :/
Comment 11 Christoph Cullmann 2019-09-27 13:01:59 UTC
Git commit a592bf54ba7d0ab4c7a2fa967447b12dd76d768d by Christoph Cullmann.
Committed on 27/09/2019 at 13:00.
Pushed by cullmann into branch 'master'.

disable ctags indexing per default

one can enable it via

"index": true

in the .kateproject.

The GUI tells this now.
Related: bug 387830

M  +7    -5    .kateproject
M  +4    -4    addons/project/kateproject.cpp
M  +9    -2    addons/project/kateprojectinfoviewindex.cpp
M  +11   -4    addons/project/kateprojectworker.cpp
M  +3    -3    addons/project/kateprojectworker.h

https://invent.kde.org/kde/kate/commit/a592bf54ba7d0ab4c7a2fa967447b12dd76d768d
Comment 12 Christoph Cullmann 2019-09-27 13:02:03 UTC
Git commit a592bf54ba7d0ab4c7a2fa967447b12dd76d768d by Christoph Cullmann.
Committed on 27/09/2019 at 13:00.
Pushed by scmsync into branch 'master'.

disable ctags indexing per default

one can enable it via

"index": true

in the .kateproject.

The GUI tells this now.
Related: bug 387830

M  +7    -5    .kateproject
M  +4    -4    addons/project/kateproject.cpp
M  +9    -2    addons/project/kateprojectinfoviewindex.cpp
M  +11   -4    addons/project/kateprojectworker.cpp
M  +3    -3    addons/project/kateprojectworker.h

https://commits.kde.org/kate/a592bf54ba7d0ab4c7a2fa967447b12dd76d768d
Comment 13 Dominik Haumann 2019-09-28 05:40:01 UTC
Backport to 19.08?
Comment 14 Christoph Cullmann 2019-09-28 09:37:39 UTC
Does a string change.