disable ctags indexing per default

one can enable it via

"index": true

in the .kateproject.

The GUI tells this now.

BUG: 412351
BUG: 387830